@@ -29,6 +29,8 @@ git-annex (5.2015022) UNRELEASED; urgency=medium
     that contain unicode characters.
   * sync: Fix committing when in a direct mode repo that has no HEAD ref.
     (For example, a newly checked out git submodule.)
+  * Added SETURIPRESENT and SETURIMISSING to external special remote protocol,
+    useful for things like ipfs that don't use regular urls.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400
 
